--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,10 +1,10 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'us-central1-docker.pkg.dev/winged-plate-426209-c8/my-repo/my-app:$COMMIT_SHA', '.']
+  args: ['build', '-t', 'us-central1-docker.pkg.dev/winged-plate-426209-c8/my-repo/my-app:66a302c', '.']
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'us-central1-docker.pkg.dev/winged-plate-426209-c8/my-repo/my-app:$COMMIT_SHA']
+  args: ['push', 'us-central1-docker.pkg.dev/winged-plate-426209-c8/my-repo/my-app:66a302c']
 
 images:
-- 'us-central1-docker.pkg.dev/winged-plate-426209-c8/my-repo/my-app:$COMMIT_SHA'
+- 'us-central1-docker.pkg.dev/winged-plate-426209-c8/my-repo/my-app:66a302c'
 options:
   logging: 'CLOUD_LOGGING_ONLY'
