--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,10 +1,13 @@
 steps:
-- name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'us-central1-docker.pkg.dev/winged-plate-426209-c8/my-repo/my-app:$COMMIT_SHA', '.']
-- name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'us-central1-docker.pkg.dev/winged-plate-426209-c8/my-repo/my-app:$COMMIT_SHA']
+  # Build frontend Docker image
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['build', '-t', 'gcr.io/winged-plate-426209-c8/frontend:$COMMIT_SHA', './frontend']
+
+  # Push frontend Docker image to Artifact Registry
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['push', 'gcr.io/winged-plate-426209-c8/frontend:$COMMIT_SHA']
 
 images:
-- 'us-central1-docker.pkg.dev/winged-plate-426209-c8/my-repo/my-app:$COMMIT_SHA'
+  - 'gcr.io/winged-plate-426209-c8/frontend:$COMMIT_SHA'
 options:
   logging: 'CLOUD_LOGGING_ONLY'
